--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="main-content">
 <h2>
-<a id="university-of-pittsburgh" class="anchor" href="#university-of-pittsburgh" aria-hidden="true"><span class="octicon octicon-link"></span></a>University of Pittsburgh</h2>
+<a id="university-of-pittsburgh" class="anchor" href="#university-of-pittsburgh" aria-hidden="true"><span class="octicon octicon-link"></span></a>Transcribe the letters of William Pitt</h2>
 
 <ul>
 <li><a href="https://docs.google.com/document/d/1JBkXqOFao6BYrNnbwrb6iCtgkRAfWDVPsDCtmfC5TyE/edit?usp=drivesdk">Folder 1 -  William Pitt to the Governor of Pennsylvania,  February 4, 1757</a></li>
