--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <h2>
 <a id="university-of-pittsburgh" class="anchor" href="#university-of-pittsburgh" aria-hidden="true"><span class="octicon octicon-link"></span></a>Transcribe the letters of William Pitt</h2>
 
+<h3>Please sign to participate!</h3>
+<a href="https://docs.google.com/forms/d/1X9r4EHKnIo4YQZsmsJWmxS8iAdjlXIqitZV47xidPQk/viewform?c=0&w=1">Sign-in Form</a>
+
+
 <ul>
 <li><a href="https://docs.google.com/document/d/1JBkXqOFao6BYrNnbwrb6iCtgkRAfWDVPsDCtmfC5TyE/edit?usp=drivesdk">Folder 1 -  William Pitt to the Governor of Pennsylvania,  February 4, 1757</a></li>
 <li><a href="https://docs.google.com/document/d/1QSyRy-PEGCOsFg-GZT0QreohNylECZlSALZFrQqrhG8/edit?usp=drivesdk">Folder 2 -  William Pitt to Sir Charles Tynt,  June 1, 1761</a></li>
