striking out finished letters

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <ul>
 <li><a href="https://docs.google.com/document/d/1JBkXqOFao6BYrNnbwrb6iCtgkRAfWDVPsDCtmfC5TyE/edit?usp=drivesdk">Folder 1 -  William Pitt to the Governor of Pennsylvania,  February 4, 1757</a></li>
-<li><a href="https://docs.google.com/document/d/1QSyRy-PEGCOsFg-GZT0QreohNylECZlSALZFrQqrhG8/edit?usp=drivesdk">Folder 2 -  William Pitt to Sir Charles Tynt,  June 1, 1761</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1QSyRy-PEGCOsFg-GZT0QreohNylECZlSALZFrQqrhG8/edit?usp=drivesdk">Folder 2 -  William Pitt to Sir Charles Tynt,  June 1, 1761</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1_Bihh-vCPjvo_E-fChgiyLL4ARU7Cax9dTafQFiVcdA/edit?usp=drivesdk">Folder 3 -  William Pitt to Alexander Hood,  June 13, 1766</a></li>
 <li><a href="https://docs.google.com/document/d/1Dd7A3LFK2tSLaUO-6LGktO26EwjocJ4tptEzbkJ8CTQ/edit?usp=drivesdk">Folder 4 -  William Pitt to --,  July 31, 1766</a></li>
 <li><a href="https://docs.google.com/document/d/1Ifnsl5SBMHAg12q87WMPj53UQLCb7rY1SYpKRKFrRfw/edit?usp=drivesdk">Folder 5 -  Resolution from the Common Council of London to William Pitt,  February 10, 1775</a></li>
@@ -60,7 +60,7 @@
 <li><a href="https://docs.google.com/document/d/16EKsEoJFhYlzXv2NtIPF0Tp5v22KY99p64H6VsM-dq0/edit?usp=drivesdk">Folder 34 -  William Pitt the Younger to [Mr. Taylor],  October 27, 1804</a></li>
 <li><a href="https://docs.google.com/document/d/1gDJweTlxtTJ5Q8-Cc0-q4AiKzwp0rNrrutEbqvG6e_w/edit?usp=drivesdk">Folder 35 -  William Pitt to "My dear Lord,"  undated</a></li>
 <li><a href="https://docs.google.com/document/d/1HsnGIwx7bsmzVRIkg7NGnjUO4YsAAMFi01CLSHHzk_Y/edit?usp=drivesdk">Folder 36 -  William Pitt to Mr. Richardson,  undated</a></li>
-<li><a href="https://docs.google.com/document/d/1pO2NT7Q3LxCCL4EcJleBIZy2fb6blH-588ULsM0Pu2o/edit?usp=drivesdk">Folder 37 -  William Pitt to --,  undated</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1pO2NT7Q3LxCCL4EcJleBIZy2fb6blH-588ULsM0Pu2o/edit?usp=drivesdk">Folder 37 -  William Pitt to --,  undated</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1eEkc6r_mCf7oJXoBqToTApHMAKslwI6d--ZySUFdxSw/edit?usp=drivesdk">Folder 38 -  William Pitt to Captain and Mrs.[Alexander] Hood,  undated</a></li>
 <li><a href="https://docs.google.com/document/d/1mXDI20upYEAkI5cjOgS18pWthLl7uaaJdigd4K9JfJ8/edit?usp=drivesdk">Folder 39 -  William Pitt to [Alexander] Hood,  undated</a></li>
 <li><a href="https://docs.google.com/document/d/1L52_HZcWKRcPvPMWzEbLVfXyiflRvREyZHdTbDWMNsg/edit?usp=drivesdk">Folder 40 -  William Pitt to Captain [Alexander] Hood,  undated</a></li>
