--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <li><a href="https://docs.google.com/document/d/1_Bihh-vCPjvo_E-fChgiyLL4ARU7Cax9dTafQFiVcdA/edit?usp=drivesdk">Folder 3 -  William Pitt to Alexander Hood,  June 13, 1766</a></li>
 <li><a href="https://docs.google.com/document/d/1Dd7A3LFK2tSLaUO-6LGktO26EwjocJ4tptEzbkJ8CTQ/edit?usp=drivesdk">Folder 4 -  William Pitt to --,  July 31, 1766</a></li>
 <li><a href="https://docs.google.com/document/d/1Ifnsl5SBMHAg12q87WMPj53UQLCb7rY1SYpKRKFrRfw/edit?usp=drivesdk">Folder 5 -  Resolution from the Common Council of London to William Pitt,  February 10, 1775</a></li>
-<li><a href="https://docs.google.com/document/d/15LRoJyfyBv5KtDyCFGjIW_LYCUhDiOhPwKKrxE9OAKs/edit?usp=drivesdk">Folder 6 -  William Pitt to [Alexander] Hood,  May 15, 1771</a></li>
+<li><strike></strike><a href="https://docs.google.com/document/d/15LRoJyfyBv5KtDyCFGjIW_LYCUhDiOhPwKKrxE9OAKs/edit?usp=drivesdk">Folder 6 -  William Pitt to [Alexander] Hood,  May 15, 1771</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1e0IP4tL0BCaUqRHf-mnpmL_ITzQAuTn5ZNKyGPBbiNw/edit?usp=drivesdk">Folder 7 -  William Pitt to Alexander Hood,  March 8, 1772</a></li>
 <li><a href="https://docs.google.com/document/d/1hCmtT1r5VM_yFiY8Sg6_P4Wno-Ki65z3Pzh48wadiBE/edit?usp=drivesdk">Folder 8 -  William Pitt to [Alexander] Hood,  July 24, 1772</a></li>
 <li><a href="https://docs.google.com/document/d/1rqfgiZOTr9tYE-RdKwtf6SeNIA_nDUysezxbgxgrQVc/edit?usp=drivesdk">Folder 9 -  William Pitt to [Alexander] Hood,  September 16, 1772</a></li>
@@ -67,7 +67,7 @@
 <li><a href="https://docs.google.com/document/d/1iY7B8jqWltSECoX11VEydQ6w7iYiLUzr_-OcoYEPN4c/edit?usp=drivesdk">Folder 41 -  Hester Grenville Pitt to Viscountess Bridport [Mrs. Alexander Hood],  undated</a></li>
 <li><a href="https://docs.google.com/document/d/1Uf2lVMOE4hWZff3T6T0ZCSH6vu9QfM7WU14wxCIoOjc/edit?usp=drivesdk">Folder 42 -  Hester Grenville Pitt to Madame [Hood],  undated</a></li>
 <li><a href="https://docs.google.com/document/d/1jhIY0oQCXXE8I30sAW19NJmfKeMQxmflbdSvvcb468k/edit?usp=drivesdk">Folder 43 -  William Pitt the Younger to Alexander Hood,  undated</a></li>
-<li><a href="https://docs.google.com/document/d/1JV8YOwYEU99NjMxmhDK8NW-XrJA3GAzm8yk3BtR-sQE/edit?usp=drivesdk">Folder 44 -  William Pitt the Younger to Alexander Hood,  undated</a></li>
+<li><strike></strike><a href="https://docs.google.com/document/d/1JV8YOwYEU99NjMxmhDK8NW-XrJA3GAzm8yk3BtR-sQE/edit?usp=drivesdk">Folder 44 -  William Pitt the Younger to Alexander Hood,  undated</a></strike></strike></li>
 <li><a href="https://docs.google.com/document/d/1RedUQZ4hsalPVRSR7lBIu2XtXYyG49Hs8yD3oyVfpO4/edit?usp=drivesdk">Folder 45 -  William Pitt the Younger to [His Royal Highness],  undated</a></li>
 <li><a href="https://docs.google.com/document/d/1kIqVWsOR6OjY1iiMAtVWUY8D5WroqP0oLZBS_nVRNnE/edit?usp=drivesdk">Folder 46 -  [William Pitt the Younger] to "My dear Lord,"  undated</a></li>
 </ul>
