updating completed letters

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <li><a href="https://docs.google.com/document/d/13qBt7SLZsAeAjE5p-T9lTNV24iaFmvhBKymIzaxa6eo/edit?usp=drivesdk">Folder 30 -  William Pitt the Younger to --,  May 18, 1796</a></li>
 <li><a href="https://docs.google.com/document/d/1LcXgLy8k-cIYfYX2hRww0zGI5WsHfdx49WeV23-Jq9Y/edit?usp=drivesdk">Folder 31 -  William Pitt the Younger to --,  September 14, 1799</a></li>
 <li><a href="https://docs.google.com/document/d/15ZDXvfHAm96qpY28TPuDV89e2-BBvd6M1fARMcqu6Mw/edit?usp=drivesdk">Folder 32 -  William Pitt the Younger to [University of Cambridge],  May 10, 1804</a></li>
-<li><a href="https://docs.google.com/document/d/1QeHtMq0rdTnSsEITWSCxLirzSkf97hqfK67Gpac-NiM/edit?usp=drivesdk">Folder 33 -  William Pitt the Younger to Lord Kingston,  June 26, 1804</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1QeHtMq0rdTnSsEITWSCxLirzSkf97hqfK67Gpac-NiM/edit?usp=drivesdk">Folder 33 -  William Pitt the Younger to Lord Kingston,  June 26, 1804</a></strike></li>
 <li><a href="https://docs.google.com/document/d/16EKsEoJFhYlzXv2NtIPF0Tp5v22KY99p64H6VsM-dq0/edit?usp=drivesdk">Folder 34 -  William Pitt the Younger to [Mr. Taylor],  October 27, 1804</a></li>
 <li><a href="https://docs.google.com/document/d/1gDJweTlxtTJ5Q8-Cc0-q4AiKzwp0rNrrutEbqvG6e_w/edit?usp=drivesdk">Folder 35 -  William Pitt to "My dear Lord,"  undated</a></li>
 <li><a href="https://docs.google.com/document/d/1HsnGIwx7bsmzVRIkg7NGnjUO4YsAAMFi01CLSHHzk_Y/edit?usp=drivesdk">Folder 36 -  William Pitt to Mr. Richardson,  undated</a></li>
