updating transcribed letters

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <li><strike><a href="https://docs.google.com/document/d/1mXDI20upYEAkI5cjOgS18pWthLl7uaaJdigd4K9JfJ8/edit?usp=drivesdk">Folder 39 -  William Pitt to [Alexander] Hood,  undated</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1L52_HZcWKRcPvPMWzEbLVfXyiflRvREyZHdTbDWMNsg/edit?usp=drivesdk">Folder 40 -  William Pitt to Captain [Alexander] Hood,  undated</a></li>
 <li><strike><a href="https://docs.google.com/document/d/1iY7B8jqWltSECoX11VEydQ6w7iYiLUzr_-OcoYEPN4c/edit?usp=drivesdk">Folder 41 -  Hester Grenville Pitt to Viscountess Bridport [Mrs. Alexander Hood],  undated</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1Uf2lVMOE4hWZff3T6T0ZCSH6vu9QfM7WU14wxCIoOjc/edit?usp=drivesdk">Folder 42 -  Hester Grenville Pitt to Madame [Hood],  undated</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1Uf2lVMOE4hWZff3T6T0ZCSH6vu9QfM7WU14wxCIoOjc/edit?usp=drivesdk">Folder 42 -  Hester Grenville Pitt to Madame [Hood],  undated</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1jhIY0oQCXXE8I30sAW19NJmfKeMQxmflbdSvvcb468k/edit?usp=drivesdk">Folder 43 -  William Pitt the Younger to Alexander Hood,  undated</a></li>
 <li><strike></strike><a href="https://docs.google.com/document/d/1JV8YOwYEU99NjMxmhDK8NW-XrJA3GAzm8yk3BtR-sQE/edit?usp=drivesdk">Folder 44 -  William Pitt the Younger to Alexander Hood,  undated</a></strike></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1RedUQZ4hsalPVRSR7lBIu2XtXYyG49Hs8yD3oyVfpO4/edit?usp=drivesdk">Folder 45 -  William Pitt the Younger to [His Royal Highness],  undated</a></strike></li>
