--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
 <br>
 
 <ul>
-<li><a href="https://docs.google.com/document/d/1JBkXqOFao6BYrNnbwrb6iCtgkRAfWDVPsDCtmfC5TyE/edit?usp=drivesdk">Folder 1 -  William Pitt to the Governor of Pennsylvania,  February 4, 1757</a></li>
+<li><a href="https://docs.google.com/document/d/1JBkXqOFao6BYrNnbwrb6iCtgkRAfWDVPsDCtmfC5TyE/edit?usp=drivesdk"><b>IN - PROGRESS </b> -- Folder 1 -  William Pitt to the Governor of Pennsylvania,  February 4, 1757</a></li>
 <li><strike><a href="https://docs.google.com/document/d/1QSyRy-PEGCOsFg-GZT0QreohNylECZlSALZFrQqrhG8/edit?usp=drivesdk">Folder 2 -  William Pitt to Sir Charles Tynt,  June 1, 1761</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1_Bihh-vCPjvo_E-fChgiyLL4ARU7Cax9dTafQFiVcdA/edit?usp=drivesdk">Folder 3 -  William Pitt to Alexander Hood,  June 13, 1766</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1Dd7A3LFK2tSLaUO-6LGktO26EwjocJ4tptEzbkJ8CTQ/edit?usp=drivesdk">Folder 4 -  William Pitt to --,  July 31, 1766</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1Ifnsl5SBMHAg12q87WMPj53UQLCb7rY1SYpKRKFrRfw/edit?usp=drivesdk">Folder 5 -  Resolution from the Common Council of London to William Pitt,  February 10, 1775</a></strike></li>
-<li><strike></strike><a href="https://docs.google.com/document/d/15LRoJyfyBv5KtDyCFGjIW_LYCUhDiOhPwKKrxE9OAKs/edit?usp=drivesdk">Folder 6 -  William Pitt to [Alexander] Hood,  May 15, 1771</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1e0IP4tL0BCaUqRHf-mnpmL_ITzQAuTn5ZNKyGPBbiNw/edit?usp=drivesdk">Folder 7 -  William Pitt to Alexander Hood,  March 8, 1772</a></li>
+<li><strike><a href="https://docs.google.com/document/d/15LRoJyfyBv5KtDyCFGjIW_LYCUhDiOhPwKKrxE9OAKs/edit?usp=drivesdk">Folder 6 -  William Pitt to [Alexander] Hood,  May 15, 1771</a></strike></strike></li>
+<li><a href="https://docs.google.com/document/d/1e0IP4tL0BCaUqRHf-mnpmL_ITzQAuTn5ZNKyGPBbiNw/edit?usp=drivesdk"><b>IN - PROGRESS </b> -- Folder 7 -  William Pitt to Alexander Hood,  March 8, 1772</a></li>
 <li><strike><a href="https://docs.google.com/document/d/1hCmtT1r5VM_yFiY8Sg6_P4Wno-Ki65z3Pzh48wadiBE/edit?usp=drivesdk">Folder 8 -  William Pitt to [Alexander] Hood,  July 24, 1772</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1rqfgiZOTr9tYE-RdKwtf6SeNIA_nDUysezxbgxgrQVc/edit?usp=drivesdk">Folder 9 -  William Pitt to [Alexander] Hood,  September 16, 1772</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1h4kP3yMp3H_6nAd7bsJNiCpUfmuY5U1OkLN-e6aQC8Y/edit?usp=drivesdk">Folder 10 -  Hester Grenville Pitt to [Alexander Hood],  October 7, 1772</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1h4kP3yMp3H_6nAd7bsJNiCpUfmuY5U1OkLN-e6aQC8Y/edit?usp=drivesdk">Folder 10 -  Hester Grenville Pitt to [Alexander Hood],  October 7, 1772</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1DIDlJWSVUDzbIGZzF0rieLKVdf5ReN284ywZPFv94Zw/edit?usp=drivesdk">Folder 11 -  Hester Grenville Pitt to Alexander Hood,  November 7, 1772</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1LgLCoaHoLvoiAon6oEQWC0uqnqWk4uD_jeyHL4Qu8Vk/edit?usp=drivesdk">Folder 12 -  William Pitt to [Alexander Hood],  November 30, 1772</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1W0Gv4UJ0HxAniFoesWvo6T0JfBELxzEE_skdUua-koE/edit?usp=drivesdk">Folder 13 -  Hester Grenville Pitt to Alexander Hood,  April 25. 1773</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1oXBD4Q4z4-wZVwG_HmZqAiICSF1PRf3rd8_rZgfqwUY/edit?usp=drivesdk">Folder 14 -  Hester Grenville Pitt to [Alexander] Hood,  May 10, 1773</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/14oeeNkrPxNQBleKASYSUaOHVuhUOTTnEVvCX3Xv5hSQ/edit?usp=drivesdk">Folder 15 -  William Pitt to --,  June 12, 1773</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1LgaxB9CrS9zbpoIoyfsTpMLPG3CC2pe5_WqO6sWWC3o/edit?usp=drivesdk">Folder 16 -  William Pitt to Alexander Hood,  July 26, 1773</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1LgaxB9CrS9zbpoIoyfsTpMLPG3CC2pe5_WqO6sWWC3o/edit?usp=drivesdk">Folder 16 -  William Pitt to Alexander Hood,  July 26, 1773</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1T44IVoQYAR0hPTY65Q9lTU62ZXbHK2sbfXe7WDcjKLU/edit?usp=drivesdk">Folder 17 -  William Pitt to Mrs. [Alexander] Hood,  July 13, 1773</a></li>
-<li><a href="https://docs.google.com/document/d/1m_Nk63IDejAYVaHO0IBI-9XIAZpPeyIFR4tjMEBFDpI/edit?usp=drivesdk">Folder 18 -  Hester Grenville Pitt to [Alexander] Hood,  February 22, 1774</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1m_Nk63IDejAYVaHO0IBI-9XIAZpPeyIFR4tjMEBFDpI/edit?usp=drivesdk">Folder 18 -  Hester Grenville Pitt to [Alexander] Hood,  February 22, 1774</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/12yb2czcUGW2ni5J2Dmu3F7Vy4DQJNBqF64X7F4Nm85k/edit?usp=drivesdk">Folder 19 -  William Pitt the Younger to Alexander Hood,  November 13, 1775</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1uqc73F5q_Z0BIuamDCCMOcSY0uVwh_0P9lZSTscPJM8/edit?usp=drivesdk">Folder 20 -  Hester Grenville Pitt to [Alexander Hood],  March 5, 1776</a></li>
+<li><a href="https://docs.google.com/document/d/1uqc73F5q_Z0BIuamDCCMOcSY0uVwh_0P9lZSTscPJM8/edit?usp=drivesdk"><b>IN - PROGRESS </b> -- Folder 20 -  Hester Grenville Pitt to [Alexander Hood],  March 5, 1776</a></li>
 <li><strike><a href="https://docs.google.com/document/d/1S0HeB_3KsIcyIUyhKgFg4GN2RAQaSx7wMzR5OoP4y6c/edit?usp=drivesdk">Folder 21 -  Declaration made by William Pitt to Doctor Addington,  July, 1776</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1VljJtwFd8KgNd5HccXZZHap7xoYVfIgSFQ5SB1BKAwQ/edit?usp=drivesdk">Folder 22 -  Great Britain Department of Treasury Pay Warrant,  January 11, 1783</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1VljJtwFd8KgNd5HccXZZHap7xoYVfIgSFQ5SB1BKAwQ/edit?usp=drivesdk">Folder 22 -  Great Britain Department of Treasury Pay Warrant,  January 11, 1783</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1UP8TdcN4P7M7s_EDXx9vlOlKTm4cE9s00e7EamQ9380/edit?usp=drivesdk">Folder 23 -  William Pitt the Younger to --,  September 22, 1780</a></li>
 <li><a href="https://docs.google.com/document/d/1-guM8PWzJZUVLzj4KDMRW0Of3LphFw_6qpEZ59tD_38/edit?usp=drivesdk">Folder 24 -  William Pitt the Younger to --,  July 14, 1785</a></li>
 <li><a href="https://docs.google.com/document/d/1Lnm1EZrH6Vrq3xzCsaAEiPFwAAQ66gGYCsketpgOTUc/edit?usp=drivesdk">Folder 25 -  William Pitt the Younger to Madame Gratarole,  March 4, 1786</a></li>
@@ -54,7 +54,7 @@
 <li><a href="https://docs.google.com/document/d/1xqJvAbk2bjurjGusw8w_NexyR4J74rfrPoVz1hJljkw/edit?usp=drivesdk">Folder 28 -  Hester Grenville Pitt to [Alexander Hood],  May 3, 1788</a></li>
 <li><a href="https://docs.google.com/document/d/12jI3_kobYE1nANaSkfHSK6mHrZbLpP9EODOjmVIbqwM/edit?usp=drivesdk">Folder 29 -  William Pitt the Younger to Lady Chatham,  July 20, 1790</a></li>
 <li><strike><a href="https://docs.google.com/document/d/13qBt7SLZsAeAjE5p-T9lTNV24iaFmvhBKymIzaxa6eo/edit?usp=drivesdk">Folder 30 -  William Pitt the Younger to --,  May 18, 1796</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1LcXgLy8k-cIYfYX2hRww0zGI5WsHfdx49WeV23-Jq9Y/edit?usp=drivesdk">Folder 31 -  William Pitt the Younger to --,  September 14, 1799</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1LcXgLy8k-cIYfYX2hRww0zGI5WsHfdx49WeV23-Jq9Y/edit?usp=drivesdk">Folder 31 -  William Pitt the Younger to --,  September 14, 1799</a></strike></li>
 <li><a href="https://docs.google.com/document/d/15ZDXvfHAm96qpY28TPuDV89e2-BBvd6M1fARMcqu6Mw/edit?usp=drivesdk">Folder 32 -  William Pitt the Younger to [University of Cambridge],  May 10, 1804</a></li>
 <li><strike><a href="https://docs.google.com/document/d/1QeHtMq0rdTnSsEITWSCxLirzSkf97hqfK67Gpac-NiM/edit?usp=drivesdk">Folder 33 -  William Pitt the Younger to Lord Kingston,  June 26, 1804</a></strike></li>
 <li><a href="https://docs.google.com/document/d/16EKsEoJFhYlzXv2NtIPF0Tp5v22KY99p64H6VsM-dq0/edit?usp=drivesdk">Folder 34 -  William Pitt the Younger to [Mr. Taylor],  October 27, 1804</a></li>
@@ -67,7 +67,7 @@
 <li><strike><a href="https://docs.google.com/document/d/1iY7B8jqWltSECoX11VEydQ6w7iYiLUzr_-OcoYEPN4c/edit?usp=drivesdk">Folder 41 -  Hester Grenville Pitt to Viscountess Bridport [Mrs. Alexander Hood],  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1Uf2lVMOE4hWZff3T6T0ZCSH6vu9QfM7WU14wxCIoOjc/edit?usp=drivesdk">Folder 42 -  Hester Grenville Pitt to Madame [Hood],  undated</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1jhIY0oQCXXE8I30sAW19NJmfKeMQxmflbdSvvcb468k/edit?usp=drivesdk">Folder 43 -  William Pitt the Younger to Alexander Hood,  undated</a></li>
-<li><strike></strike><a href="https://docs.google.com/document/d/1JV8YOwYEU99NjMxmhDK8NW-XrJA3GAzm8yk3BtR-sQE/edit?usp=drivesdk">Folder 44 -  William Pitt the Younger to Alexander Hood,  undated</a></strike></strike></li>
+<li><strike><a href="https://docs.google.com/document/d/1JV8YOwYEU99NjMxmhDK8NW-XrJA3GAzm8yk3BtR-sQE/edit?usp=drivesdk">Folder 44 -  William Pitt the Younger to Alexander Hood,  undated</a></strike></strike></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1RedUQZ4hsalPVRSR7lBIu2XtXYyG49Hs8yD3oyVfpO4/edit?usp=drivesdk">Folder 45 -  William Pitt the Younger to [His Royal Highness],  undated</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1kIqVWsOR6OjY1iiMAtVWUY8D5WroqP0oLZBS_nVRNnE/edit?usp=drivesdk">Folder 46 -  [William Pitt the Younger] to "My dear Lord,"  undated</a></li>
 </ul>
