--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <br>
 
 <ul>
-<li><a href="https://docs.google.com/document/d/1JBkXqOFao6BYrNnbwrb6iCtgkRAfWDVPsDCtmfC5TyE/edit?usp=drivesdk"><b>IN - PROGRESS </b> -- Folder 1 -  William Pitt to the Governor of Pennsylvania,  February 4, 1757</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1JBkXqOFao6BYrNnbwrb6iCtgkRAfWDVPsDCtmfC5TyE/edit?usp=drivesdk">Folder 1 -  William Pitt to the Governor of Pennsylvania,  February 4, 1757</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1QSyRy-PEGCOsFg-GZT0QreohNylECZlSALZFrQqrhG8/edit?usp=drivesdk">Folder 2 -  William Pitt to Sir Charles Tynt,  June 1, 1761</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1_Bihh-vCPjvo_E-fChgiyLL4ARU7Cax9dTafQFiVcdA/edit?usp=drivesdk">Folder 3 -  William Pitt to Alexander Hood,  June 13, 1766</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1Dd7A3LFK2tSLaUO-6LGktO26EwjocJ4tptEzbkJ8CTQ/edit?usp=drivesdk">Folder 4 -  William Pitt to --,  July 31, 1766</a></strike></li>
