--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <li><strike><a href="https://docs.google.com/document/d/1Dd7A3LFK2tSLaUO-6LGktO26EwjocJ4tptEzbkJ8CTQ/edit?usp=drivesdk">Folder 4 -  William Pitt to --,  July 31, 1766</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1Ifnsl5SBMHAg12q87WMPj53UQLCb7rY1SYpKRKFrRfw/edit?usp=drivesdk">Folder 5 -  Resolution from the Common Council of London to William Pitt,  February 10, 1775</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/15LRoJyfyBv5KtDyCFGjIW_LYCUhDiOhPwKKrxE9OAKs/edit?usp=drivesdk">Folder 6 -  William Pitt to [Alexander] Hood,  May 15, 1771</a></strike></strike></li>
-<li><a href="https://docs.google.com/document/d/1e0IP4tL0BCaUqRHf-mnpmL_ITzQAuTn5ZNKyGPBbiNw/edit?usp=drivesdk"><b>IN - PROGRESS </b> -- Folder 7 -  William Pitt to Alexander Hood,  March 8, 1772</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1e0IP4tL0BCaUqRHf-mnpmL_ITzQAuTn5ZNKyGPBbiNw/edit?usp=drivesdk">Folder 7 -  William Pitt to Alexander Hood,  March 8, 1772</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1hCmtT1r5VM_yFiY8Sg6_P4Wno-Ki65z3Pzh48wadiBE/edit?usp=drivesdk">Folder 8 -  William Pitt to [Alexander] Hood,  July 24, 1772</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1rqfgiZOTr9tYE-RdKwtf6SeNIA_nDUysezxbgxgrQVc/edit?usp=drivesdk">Folder 9 -  William Pitt to [Alexander] Hood,  September 16, 1772</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1h4kP3yMp3H_6nAd7bsJNiCpUfmuY5U1OkLN-e6aQC8Y/edit?usp=drivesdk">Folder 10 -  Hester Grenville Pitt to [Alexander Hood],  October 7, 1772</a></strike></li>
