--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 <li><a href="https://docs.google.com/document/d/1T44IVoQYAR0hPTY65Q9lTU62ZXbHK2sbfXe7WDcjKLU/edit?usp=drivesdk">Folder 17 -  William Pitt to Mrs. [Alexander] Hood,  July 13, 1773</a></li>
 <li><strike><a href="https://docs.google.com/document/d/1m_Nk63IDejAYVaHO0IBI-9XIAZpPeyIFR4tjMEBFDpI/edit?usp=drivesdk">Folder 18 -  Hester Grenville Pitt to [Alexander] Hood,  February 22, 1774</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/12yb2czcUGW2ni5J2Dmu3F7Vy4DQJNBqF64X7F4Nm85k/edit?usp=drivesdk">Folder 19 -  William Pitt the Younger to Alexander Hood,  November 13, 1775</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1uqc73F5q_Z0BIuamDCCMOcSY0uVwh_0P9lZSTscPJM8/edit?usp=drivesdk"><b>IN - PROGRESS </b> -- Folder 20 -  Hester Grenville Pitt to [Alexander Hood],  March 5, 1776</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1uqc73F5q_Z0BIuamDCCMOcSY0uVwh_0P9lZSTscPJM8/edit?usp=drivesdk">Folder 20 -  Hester Grenville Pitt to [Alexander Hood],  March 5, 1776</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1S0HeB_3KsIcyIUyhKgFg4GN2RAQaSx7wMzR5OoP4y6c/edit?usp=drivesdk">Folder 21 -  Declaration made by William Pitt to Doctor Addington,  July, 1776</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1VljJtwFd8KgNd5HccXZZHap7xoYVfIgSFQ5SB1BKAwQ/edit?usp=drivesdk">Folder 22 -  Great Britain Department of Treasury Pay Warrant,  January 11, 1783</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1UP8TdcN4P7M7s_EDXx9vlOlKTm4cE9s00e7EamQ9380/edit?usp=drivesdk">Folder 23 -  William Pitt the Younger to --,  September 22, 1780</a></li>
 <li><a href="https://docs.google.com/document/d/1-guM8PWzJZUVLzj4KDMRW0Of3LphFw_6qpEZ59tD_38/edit?usp=drivesdk">Folder 24 -  William Pitt the Younger to --,  July 14, 1785</a></li>
 <li><a href="https://docs.google.com/document/d/1Lnm1EZrH6Vrq3xzCsaAEiPFwAAQ66gGYCsketpgOTUc/edit?usp=drivesdk">Folder 25 -  William Pitt the Younger to Madame Gratarole,  March 4, 1786</a></li>
-<li><a href="https://docs.google.com/document/d/15znsfYp4DNVonADPB-U9DwBbHxkF3LKaEDwF2Hq2_98/edit?usp=drivesdk">Folder 26 -  William Pitt the Younger to --,  January 1, 1787</a></li>
+<li><strike><a href="https://docs.google.com/document/d/15znsfYp4DNVonADPB-U9DwBbHxkF3LKaEDwF2Hq2_98/edit?usp=drivesdk">Folder 26 -  William Pitt the Younger to --,  January 1, 1787</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1pTe5VyWuBmTFlhTxfncRFr-zJMQybTsgXOzmYpX6NRs/edit?usp=drivesdk">Folder 27 -  William Pitt the Younger to [Alexander] Hood, September 22, 1787</a></li>
 <li><a href="https://docs.google.com/document/d/1xqJvAbk2bjurjGusw8w_NexyR4J74rfrPoVz1hJljkw/edit?usp=drivesdk">Folder 28 -  Hester Grenville Pitt to [Alexander Hood],  May 3, 1788</a></li>
-<li><a href="https://docs.google.com/document/d/12jI3_kobYE1nANaSkfHSK6mHrZbLpP9EODOjmVIbqwM/edit?usp=drivesdk">Folder 29 -  William Pitt the Younger to Lady Chatham,  July 20, 1790</a></li>
+<li><strike><a href="https://docs.google.com/document/d/12jI3_kobYE1nANaSkfHSK6mHrZbLpP9EODOjmVIbqwM/edit?usp=drivesdk">Folder 29 -  William Pitt the Younger to Lady Chatham,  July 20, 1790</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/13qBt7SLZsAeAjE5p-T9lTNV24iaFmvhBKymIzaxa6eo/edit?usp=drivesdk">Folder 30 -  William Pitt the Younger to --,  May 18, 1796</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1LcXgLy8k-cIYfYX2hRww0zGI5WsHfdx49WeV23-Jq9Y/edit?usp=drivesdk">Folder 31 -  William Pitt the Younger to --,  September 14, 1799</a></strike></li>
 <li><a href="https://docs.google.com/document/d/15ZDXvfHAm96qpY28TPuDV89e2-BBvd6M1fARMcqu6Mw/edit?usp=drivesdk">Folder 32 -  William Pitt the Younger to [University of Cambridge],  May 10, 1804</a></li>
