--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
 <li><strike><a href="https://docs.google.com/document/d/1uqc73F5q_Z0BIuamDCCMOcSY0uVwh_0P9lZSTscPJM8/edit?usp=drivesdk">Folder 20 -  Hester Grenville Pitt to [Alexander Hood],  March 5, 1776</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1S0HeB_3KsIcyIUyhKgFg4GN2RAQaSx7wMzR5OoP4y6c/edit?usp=drivesdk">Folder 21 -  Declaration made by William Pitt to Doctor Addington,  July, 1776</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1VljJtwFd8KgNd5HccXZZHap7xoYVfIgSFQ5SB1BKAwQ/edit?usp=drivesdk">Folder 22 -  Great Britain Department of Treasury Pay Warrant,  January 11, 1783</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1UP8TdcN4P7M7s_EDXx9vlOlKTm4cE9s00e7EamQ9380/edit?usp=drivesdk">Folder 23 -  William Pitt the Younger to --,  September 22, 1780</a></li>
-<li><a href="https://docs.google.com/document/d/1-guM8PWzJZUVLzj4KDMRW0Of3LphFw_6qpEZ59tD_38/edit?usp=drivesdk">Folder 24 -  William Pitt the Younger to --,  July 14, 1785</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1UP8TdcN4P7M7s_EDXx9vlOlKTm4cE9s00e7EamQ9380/edit?usp=drivesdk">Folder 23 -  William Pitt the Younger to --,  September 22, 1780</a></strike></li>
+<li><strike><a href="https://docs.google.com/document/d/1-guM8PWzJZUVLzj4KDMRW0Of3LphFw_6qpEZ59tD_38/edit?usp=drivesdk">Folder 24 -  William Pitt the Younger to --,  July 14, 1785</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1Lnm1EZrH6Vrq3xzCsaAEiPFwAAQ66gGYCsketpgOTUc/edit?usp=drivesdk">Folder 25 -  William Pitt the Younger to Madame Gratarole,  March 4, 1786</a></li>
 <li><strike><a href="https://docs.google.com/document/d/15znsfYp4DNVonADPB-U9DwBbHxkF3LKaEDwF2Hq2_98/edit?usp=drivesdk">Folder 26 -  William Pitt the Younger to --,  January 1, 1787</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1pTe5VyWuBmTFlhTxfncRFr-zJMQybTsgXOzmYpX6NRs/edit?usp=drivesdk">Folder 27 -  William Pitt the Younger to [Alexander] Hood, September 22, 1787</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1pTe5VyWuBmTFlhTxfncRFr-zJMQybTsgXOzmYpX6NRs/edit?usp=drivesdk">Folder 27 -  William Pitt the Younger to [Alexander] Hood, September 22, 1787</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1xqJvAbk2bjurjGusw8w_NexyR4J74rfrPoVz1hJljkw/edit?usp=drivesdk">Folder 28 -  Hester Grenville Pitt to [Alexander Hood],  May 3, 1788</a></li>
 <li><strike><a href="https://docs.google.com/document/d/12jI3_kobYE1nANaSkfHSK6mHrZbLpP9EODOjmVIbqwM/edit?usp=drivesdk">Folder 29 -  William Pitt the Younger to Lady Chatham,  July 20, 1790</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/13qBt7SLZsAeAjE5p-T9lTNV24iaFmvhBKymIzaxa6eo/edit?usp=drivesdk">Folder 30 -  William Pitt the Younger to --,  May 18, 1796</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1LcXgLy8k-cIYfYX2hRww0zGI5WsHfdx49WeV23-Jq9Y/edit?usp=drivesdk">Folder 31 -  William Pitt the Younger to --,  September 14, 1799</a></strike></li>
-<li><a href="https://docs.google.com/document/d/15ZDXvfHAm96qpY28TPuDV89e2-BBvd6M1fARMcqu6Mw/edit?usp=drivesdk">Folder 32 -  William Pitt the Younger to [University of Cambridge],  May 10, 1804</a></li>
+<li><strike><a href="https://docs.google.com/document/d/15ZDXvfHAm96qpY28TPuDV89e2-BBvd6M1fARMcqu6Mw/edit?usp=drivesdk">Folder 32 -  William Pitt the Younger to [University of Cambridge],  May 10, 1804</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1QeHtMq0rdTnSsEITWSCxLirzSkf97hqfK67Gpac-NiM/edit?usp=drivesdk">Folder 33 -  William Pitt the Younger to Lord Kingston,  June 26, 1804</a></strike></li>
-<li><a href="https://docs.google.com/document/d/16EKsEoJFhYlzXv2NtIPF0Tp5v22KY99p64H6VsM-dq0/edit?usp=drivesdk">Folder 34 -  William Pitt the Younger to [Mr. Taylor],  October 27, 1804</a></li>
-<li><a href="https://docs.google.com/document/d/1gDJweTlxtTJ5Q8-Cc0-q4AiKzwp0rNrrutEbqvG6e_w/edit?usp=drivesdk">Folder 35 -  William Pitt to "My dear Lord,"  undated</a></li>
+<li><strike><a href="https://docs.google.com/document/d/16EKsEoJFhYlzXv2NtIPF0Tp5v22KY99p64H6VsM-dq0/edit?usp=drivesdk">Folder 34 -  William Pitt the Younger to [Mr. Taylor],  October 27, 1804</a></strike></li>
+<li><strike><a href="https://docs.google.com/document/d/1gDJweTlxtTJ5Q8-Cc0-q4AiKzwp0rNrrutEbqvG6e_w/edit?usp=drivesdk">Folder 35 -  William Pitt to "My dear Lord,"  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1HsnGIwx7bsmzVRIkg7NGnjUO4YsAAMFi01CLSHHzk_Y/edit?usp=drivesdk">Folder 36 -  William Pitt to Mr. Richardson,  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1pO2NT7Q3LxCCL4EcJleBIZy2fb6blH-588ULsM0Pu2o/edit?usp=drivesdk">Folder 37 -  William Pitt to --,  undated</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1eEkc6r_mCf7oJXoBqToTApHMAKslwI6d--ZySUFdxSw/edit?usp=drivesdk">Folder 38 -  William Pitt to Captain and Mrs.[Alexander] Hood,  undated</a></li>
 <li><strike><a href="https://docs.google.com/document/d/1mXDI20upYEAkI5cjOgS18pWthLl7uaaJdigd4K9JfJ8/edit?usp=drivesdk">Folder 39 -  William Pitt to [Alexander] Hood,  undated</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1L52_HZcWKRcPvPMWzEbLVfXyiflRvREyZHdTbDWMNsg/edit?usp=drivesdk">Folder 40 -  William Pitt to Captain [Alexander] Hood,  undated</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1L52_HZcWKRcPvPMWzEbLVfXyiflRvREyZHdTbDWMNsg/edit?usp=drivesdk">Folder 40 -  William Pitt to Captain [Alexander] Hood,  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1iY7B8jqWltSECoX11VEydQ6w7iYiLUzr_-OcoYEPN4c/edit?usp=drivesdk">Folder 41 -  Hester Grenville Pitt to Viscountess Bridport [Mrs. Alexander Hood],  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1Uf2lVMOE4hWZff3T6T0ZCSH6vu9QfM7WU14wxCIoOjc/edit?usp=drivesdk">Folder 42 -  Hester Grenville Pitt to Madame [Hood],  undated</a></strike></li>
 <li><a href="https://docs.google.com/document/d/1jhIY0oQCXXE8I30sAW19NJmfKeMQxmflbdSvvcb468k/edit?usp=drivesdk">Folder 43 -  William Pitt the Younger to Alexander Hood,  undated</a></li>
