--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <li><strike><a href="https://docs.google.com/document/d/1oXBD4Q4z4-wZVwG_HmZqAiICSF1PRf3rd8_rZgfqwUY/edit?usp=drivesdk">Folder 14 -  Hester Grenville Pitt to [Alexander] Hood,  May 10, 1773</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/14oeeNkrPxNQBleKASYSUaOHVuhUOTTnEVvCX3Xv5hSQ/edit?usp=drivesdk">Folder 15 -  William Pitt to --,  June 12, 1773</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1LgaxB9CrS9zbpoIoyfsTpMLPG3CC2pe5_WqO6sWWC3o/edit?usp=drivesdk">Folder 16 -  William Pitt to Alexander Hood,  July 26, 1773</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1T44IVoQYAR0hPTY65Q9lTU62ZXbHK2sbfXe7WDcjKLU/edit?usp=drivesdk">Folder 17 -  William Pitt to Mrs. [Alexander] Hood,  July 13, 1773</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1T44IVoQYAR0hPTY65Q9lTU62ZXbHK2sbfXe7WDcjKLU/edit?usp=drivesdk">Folder 17 -  William Pitt to Mrs. [Alexander] Hood,  July 13, 1773</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1m_Nk63IDejAYVaHO0IBI-9XIAZpPeyIFR4tjMEBFDpI/edit?usp=drivesdk">Folder 18 -  Hester Grenville Pitt to [Alexander] Hood,  February 22, 1774</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/12yb2czcUGW2ni5J2Dmu3F7Vy4DQJNBqF64X7F4Nm85k/edit?usp=drivesdk">Folder 19 -  William Pitt the Younger to Alexander Hood,  November 13, 1775</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1uqc73F5q_Z0BIuamDCCMOcSY0uVwh_0P9lZSTscPJM8/edit?usp=drivesdk">Folder 20 -  Hester Grenville Pitt to [Alexander Hood],  March 5, 1776</a></strike></li>
@@ -51,7 +51,7 @@
 <li><a href="https://docs.google.com/document/d/1Lnm1EZrH6Vrq3xzCsaAEiPFwAAQ66gGYCsketpgOTUc/edit?usp=drivesdk">Folder 25 -  William Pitt the Younger to Madame Gratarole,  March 4, 1786</a></li>
 <li><strike><a href="https://docs.google.com/document/d/15znsfYp4DNVonADPB-U9DwBbHxkF3LKaEDwF2Hq2_98/edit?usp=drivesdk">Folder 26 -  William Pitt the Younger to --,  January 1, 1787</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1pTe5VyWuBmTFlhTxfncRFr-zJMQybTsgXOzmYpX6NRs/edit?usp=drivesdk">Folder 27 -  William Pitt the Younger to [Alexander] Hood, September 22, 1787</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1xqJvAbk2bjurjGusw8w_NexyR4J74rfrPoVz1hJljkw/edit?usp=drivesdk">Folder 28 -  Hester Grenville Pitt to [Alexander Hood],  May 3, 1788</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1xqJvAbk2bjurjGusw8w_NexyR4J74rfrPoVz1hJljkw/edit?usp=drivesdk">Folder 28 -  Hester Grenville Pitt to [Alexander Hood],  May 3, 1788</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/12jI3_kobYE1nANaSkfHSK6mHrZbLpP9EODOjmVIbqwM/edit?usp=drivesdk">Folder 29 -  William Pitt the Younger to Lady Chatham,  July 20, 1790</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/13qBt7SLZsAeAjE5p-T9lTNV24iaFmvhBKymIzaxa6eo/edit?usp=drivesdk">Folder 30 -  William Pitt the Younger to --,  May 18, 1796</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1LcXgLy8k-cIYfYX2hRww0zGI5WsHfdx49WeV23-Jq9Y/edit?usp=drivesdk">Folder 31 -  William Pitt the Younger to --,  September 14, 1799</a></strike></li>
@@ -61,15 +61,15 @@
 <li><strike><a href="https://docs.google.com/document/d/1gDJweTlxtTJ5Q8-Cc0-q4AiKzwp0rNrrutEbqvG6e_w/edit?usp=drivesdk">Folder 35 -  William Pitt to "My dear Lord,"  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1HsnGIwx7bsmzVRIkg7NGnjUO4YsAAMFi01CLSHHzk_Y/edit?usp=drivesdk">Folder 36 -  William Pitt to Mr. Richardson,  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1pO2NT7Q3LxCCL4EcJleBIZy2fb6blH-588ULsM0Pu2o/edit?usp=drivesdk">Folder 37 -  William Pitt to --,  undated</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1eEkc6r_mCf7oJXoBqToTApHMAKslwI6d--ZySUFdxSw/edit?usp=drivesdk">Folder 38 -  William Pitt to Captain and Mrs.[Alexander] Hood,  undated</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1eEkc6r_mCf7oJXoBqToTApHMAKslwI6d--ZySUFdxSw/edit?usp=drivesdk">Folder 38 -  William Pitt to Captain and Mrs.[Alexander] Hood,  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1mXDI20upYEAkI5cjOgS18pWthLl7uaaJdigd4K9JfJ8/edit?usp=drivesdk">Folder 39 -  William Pitt to [Alexander] Hood,  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1L52_HZcWKRcPvPMWzEbLVfXyiflRvREyZHdTbDWMNsg/edit?usp=drivesdk">Folder 40 -  William Pitt to Captain [Alexander] Hood,  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1iY7B8jqWltSECoX11VEydQ6w7iYiLUzr_-OcoYEPN4c/edit?usp=drivesdk">Folder 41 -  Hester Grenville Pitt to Viscountess Bridport [Mrs. Alexander Hood],  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1Uf2lVMOE4hWZff3T6T0ZCSH6vu9QfM7WU14wxCIoOjc/edit?usp=drivesdk">Folder 42 -  Hester Grenville Pitt to Madame [Hood],  undated</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1jhIY0oQCXXE8I30sAW19NJmfKeMQxmflbdSvvcb468k/edit?usp=drivesdk">Folder 43 -  William Pitt the Younger to Alexander Hood,  undated</a></li>
-<li><strike><a href="https://docs.google.com/document/d/1JV8YOwYEU99NjMxmhDK8NW-XrJA3GAzm8yk3BtR-sQE/edit?usp=drivesdk">Folder 44 -  William Pitt the Younger to Alexander Hood,  undated</a></strike></strike></strike></li>
+<li><strike><a href="https://docs.google.com/document/d/1jhIY0oQCXXE8I30sAW19NJmfKeMQxmflbdSvvcb468k/edit?usp=drivesdk">Folder 43 -  William Pitt the Younger to Alexander Hood,  undated</a></strike></li>
+<li><strike><a href="https://docs.google.com/document/d/1JV8YOwYEU99NjMxmhDK8NW-XrJA3GAzm8yk3BtR-sQE/edit?usp=drivesdk">Folder 44 -  William Pitt the Younger to Alexander Hood,  undated</a></strike></li>
 <li><strike><a href="https://docs.google.com/document/d/1RedUQZ4hsalPVRSR7lBIu2XtXYyG49Hs8yD3oyVfpO4/edit?usp=drivesdk">Folder 45 -  William Pitt the Younger to [His Royal Highness],  undated</a></strike></li>
-<li><a href="https://docs.google.com/document/d/1kIqVWsOR6OjY1iiMAtVWUY8D5WroqP0oLZBS_nVRNnE/edit?usp=drivesdk">Folder 46 -  [William Pitt the Younger] to "My dear Lord,"  undated</a></li>
+<li><strike><a href="https://docs.google.com/document/d/1kIqVWsOR6OjY1iiMAtVWUY8D5WroqP0oLZBS_nVRNnE/edit?usp=drivesdk">Folder 46 -  [William Pitt the Younger] to "My dear Lord,"  undated</a></strike></li>
 </ul>
 
       <footer class="site-footer">
